--- a/main-style.css
+++ b/main-style.css
@@ -6,7 +6,7 @@
 body {
     background-color: #121212;
     color: #fdfdfd;
-    font-family: IBMPlexMono, monospace;
+    font-family: "Courier New", monospace;
     font-size: 1em;
 }
 
@@ -17,7 +17,7 @@ div {
 
 pre {
     margin 0;
-    font-family: IBMPlexMono, monospace;
+    font-family: "Courier New", monospace;
 }
 
 a {
@@ -27,6 +27,9 @@ a {
 a:hover {
     color: #8160be;
 }
+
+.or {
+    color: #ff981f;
 
 .gr {
     color: #9d9d9d;
