--- a/main-style.css
+++ b/main-style.css
@@ -6,7 +6,7 @@
 body {
     background-color: #121212;
     color: #fdfdfd;
-    font-family: "Courier New", monospace;
+    font-family: IBMPlexMono, monospace;
     font-size: 1em;
 }
 
@@ -17,7 +17,7 @@ div {
 
 pre {
     margin 0;
-    font-family: "Courier New", monospace;
+    font-family: IBMPlexMono, monospace;
 }
 
 a {
@@ -27,9 +27,6 @@ a {
 a:hover {
     color: #8160be;
 }
-
-.or {
-    color: #ff981f;
 
 .gr {
     color: #9d9d9d;
@@ -64,3 +61,4 @@ a:hover {
         margin: 1vw;
     }
 }
+
