--- a/styles/dark.css
+++ b/styles/dark.css
@@ -28,3 +28,32 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
 }
+
+.aside {
+    padding: 10px;
+    background-color: #232222;
+}
+
+.re {
+    color: #ef667b;
+}
+
+.bl {
+    color: #66d9ef;
+}
+
+.gr {
+    color: #90ff75;
+}
+
+.ye {
+    color: #fffd72;
+}
+
+.pu {
+    color: #b48bff;
+}
+
+.or {
+    color: #ffc257
+}
