--- a/styles/dark.css
+++ b/styles/dark.css
@@ -34,6 +34,18 @@ a:hover {
     background-color: #232222;
 }
 
+.box {
+    padding: 10px;
+    background-color: #232222;
+    border: 3px solid #ddddde;
+}
+
+.important {
+    padding: 10px;
+    background-color: #232222;
+    border: 3px solid #ef667b;
+}
+
 .re {
     color: #ef667b;
 }
