A very important commit

--- a/styles/gef.css
+++ b/styles/gef.css
@@ -21,8 +21,8 @@ body {
 }
 
 body.light-theme {
-    --txt-color: #ffffff;
-    --bkg-color: #000000;
+    --txt-color: #00ffff;
+    --bkg-color: #ff0000;
     --lnk-color: #cfb4ff;
 }
 
@@ -39,6 +39,10 @@ div {
 
 h1 {
     text-align: center;
+}
+
+h1, h2, h3, h4, h5, h6, p, a {
+    margin: 0px;
 }
 
 a {
